Add AI analysis features and update documentation
- Implement AI Analyzer to extract concepts and links from notes using OpenAI GPT-4
- Enhance README with AI analysis capabilities and usage instructions
- Update .gitignore to exclude development and testing files
- Add AI_ANALYZER_STATUS.md for tracking implementation progress
- Revise requirements.txt to include necessary dependencies for AI analysis

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ ENV/
 # Temporary files
 *.tmp
 *.temp
+
+# Development and testing files
+examples_*.py
+setup_env.sh
+test_env*.py
+final_integration*.py
